<resources>
    <string name="app_name">Team Activity Tracker</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_now">Register Now</string>
    <string name="login_error">Error logging in</string>
    <string name="first_name_empty">Please enter your first name</string>
    <string name="last_name_empty">Please enter your last name</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="registration_error">Registration Error</string>
    <string name="back">Back</string>
    <string name="title_activity_test_basic">TestBasicActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_add_profile">AddProfileActivity</string>
    <string name="add_player">Add Player</string>
    <string name="add_coach">Add Coach</string>
    <string name="enter_team_id">Enter TeamID to link the profile to an existing team</string>
    <string name="add_profile">Add Profile</string>
    <string name="team_id_optional">Team ID (Optional)</string>
    <string name="team_id">Team ID</string>
    <string name="player">Player</string>
    <string name="coach">Coach</string>
    <string name="playerProfiles">Player profiles</string>
    <string name="coachProfiles">Coach profiles</string>
    <string name="error_adding_player">Error Adding Player</string>
    <string name="error_adding_coach">Error Adding Coach</string>
    <string name="team_id_doesnt_exist">Team ID doesn\'t exist</string>
    <string name="title_activity_add_team">AddTeamActivity</string>
    <string name="add_team">Add Team</string>
    <string name="create_new_team">Create New Team</string>
    <string name="join_existing_team">Join Existing Team</string>
    <string name="team_name">Team Name</string>
    <string name="team_name_empty">Team Name is required</string>
    <string name="team_id_empty">Team ID is required</string>
    <string name="player_already_on_team">Player is already on the team</string>
    <string name="coach_already_on_team">Coach is already on the team</string>
    <string name="error_joining_team">Error Joining Team</string>
    <string name="error_creating_team">Error Creating Team</string>
    <string name="logout">Logout</string>
    <string name="title_activity_team_home">TeamHomeActivity</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_activities">Activities</string>
    <string name="title_roster">Roster</string>
    <string name="title_home">Home</string>
    <string name="Period">Period</string>
    <string name="Total">Total</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="limit">Limit:</string>
    <string name="per">Per</string>
    <string name="add_activity">Add Actvity</string>
    <string name="edit_activity">Edit Actvity</string>
    <string name="activity_name">Name:</string>
    <string name="activity_description">Description:</string>
    <string name="activity_url">URL (Optional):</string>
    <string name="complete_activity_url">URL:</string>
    <string name="title_activity_add_activity">AddActivityActivity</string>
    <string name="activity_name_required">Name Required</string>
    <string name="activity_description_required">Description Required</string>
    <string name="activity_limit_required">Limit Required</string>
    <string name="activity_limit_must_be_number">Limit must be a number</string>
    <string name="activity_limit_cant_be_zero">Limit cant be zero</string>
    <string name="activity_points_required">Points Required</string>
    <string name="activity_points_must_be_number">Points must be a number</string>
    <string name="activity_points_cant_be_zero">Points cant be zero</string>
    <string name="error_adding_activity">Error adding activity</string>
    <string name="error_updating_activity">Error Updating activity</string>
    <string name="points">Points:</string>
    <string name="title_activity_add_completed_activity">AddCompletedActivityActivity</string>
    <string name="quantity">Quantity:</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="complete_activity">Complete Activity</string>
    <string name="activity_quantity_required">Quantity Required</string>
    <string name="activity_quantity_must_be_number">Quantity must be a number</string>
    <string name="activity_quantity_cant_be_zero">Quantity cant be zero</string>
    <string name="error_completing_activity">Error completing activity</string>
    <string name="monthly_leaders">Monthly Leaders</string>
    <string name="overall_leaders">Overall Leaders</string>
    <string name="month">Month</string>
    <string name="overall">Overall</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="period_limit_reached">Period Limit Reached</string>
    <string name="show_full_leaderboard">Show full leaderboard</string>
    <string name="filter">Filter</string>
    <string name="delete_team">Delete Team</string>
    <string name="reset_points">Reset Points</string>
    <string name="title_activity_team_settings">TeamSettingsActivity</string>
    <string name="title_activity_player_detail">PlayerDetailActivity</string>
    <string name="hide_from_team">Hide from team when completed</string>
    <string name="assigned_by_coach">Assigned by coach</string>
    <string name="title_activity_add_coach_assigned_completed">AddCoachAssignedCompletedActivity</string>
    <string name="select_an_activity">Please select an Activity</string>
    <string name="team_id_already_exists">The Team ID already exists.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Reset Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_no_account">No account with that email</string>
    <string name="email_sent">You should receive a password reset email. It may go to the junk folder.</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
