<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddTeamActivity"
    tools:showIn="@layout/activity_add_team">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/add_team"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/newTeamRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="newTeamRadioButtonSelected"
                android:text="@string/create_new_team"
                android:textSize="18sp" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/existingTeamRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="existingTeamRadioButtonSelected"
                android:text="@string/join_existing_team"
                android:textSize="18sp" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/teamNameTextField"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/team_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/teamIDTextField"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/team_id"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:background="#000080"
            android:onClick="addButtonPressed"
            android:text="@string/create_new_team"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#F44336"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>